--- a/style.css
+++ b/style.css
@@ -172,3 +172,15 @@ p {
   line-height: 25px;
 }
 
+/* Contact Section */
+.fab {
+  font-size: 100px;
+  margin-right: 50px;
+  cursor: pointer;
+  color: var(--primary-color);
+}
+
+.fab:hover {
+  color: var(--on-background);
+}
+
